--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 .gitignore
-<<<<<<< HEAD
 GaborTest.java
-targer/
-comprun
-=======
-TestBoldi.java
-comprun
-target/
+targer/tournaments
+files/targer
 goat
->>>>>>> 0af8bdad124cb3b1c924725bfd5ac39d352c8d43
+comprun
